<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register"
    tools:context=".Activities.RegisterActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/registrati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrati"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_arrotondato"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrati"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/cognome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_arrotondato"
...
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_arrotondato"
...
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cognome" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_arrotondato"
...
        android:password="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email1" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_arrotondato"
...
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <Button
        android:id="@+id/btnRegistrati"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_arrotondato"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistrati"
        app:layout_constraintStart_toStartOf="@+id/btnRegistrati"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrati" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="170dp"
        android:layout_height="152dp"
        android:layout_centerInParent="true"
        android:src="@drawable/contact1"
        app:civ_border_color="@color/colorWhite"
        app:civ_border_width="2dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrati"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/Scattafoto"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="#FFFFFF"
        android:tint="#1E88E5"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

    <ImageButton
        android:id="@+id/galleria"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FFFFFF"
        android:tint="#1E88E5"
        app:layout_constraintBottom_toTopOf="@+id/nome"
...
